feat: Update dependencies and theme colors
Updates dependencies to their latest versions, including React, Three.js, and Vite. Also refactors theme colors in `index.html` and `sections/Skills.tsx` for a more refined visual aesthetic. Adds `@types/node` to `devDependencies` and enables `esModuleInterop` in `tsconfig.json`. Augments global types for AI Studio integration.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "three": "^0.170.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/three": "^0.170.0",
